# rt-utils

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RTUTILS_read_world_example_for_PET.ipynb  example.py  file_conversion_FYR.py  pyproject.toml  requirements.txt  rt-struct-test.txt  rtstruct2mask.py  setup.py
.github/workflows/: draft-pdf.yml  lint.yml  pypi-publish.yml  python-app.yml  python-publish.yml
Paper/: paper.bib  paper.md
rt_utils/: __init__.py  ds_helper.py  image_helper.py  nifti2rt.py  rtstruct.py  rtstruct_builder.py  rtstruct_merger.py  smoothing.py  utils.py
rtutils/: __init__.py  ds_helper.py  image_helper.py  rtstruct.py
sample/: 2.16.840.1.114362.1.11940992.23790159890.563423471.995.90.dcm  2.16.840.1.114362.1.11940992.23790159890.563423472.1087.91.dcm  2.16.840.1.114362.1.11940992.23790159890.563423472.148.92.dcm  metacache.mim
tests/: __init__.py  conftest.py  test_ds_helper.py  test_rtstruct_builder.py  test_utils.py
tests/empty/: dummy_rt.dcm
tests/mock_data/: ct_1.dcm  ct_2.dcm  non_existent_reference_rt.dcm  rt.dcm
tests/one_slice_data/: 0.dcm
tests/oriented_data/: 1.dcm  2.dcm  info.txt
